# mt5-monitor

./: .gitmodules  CMakeLists.txt  Readme.md  build_and_test.ps1  conanfile.txt
cmake/: .gitignore  MaybeGetFromEnv.cmake  clang-cl.cmake  clang-gcc.cmake  user-template.cmake  xwin.cmake
src/: Calendar.hpp  Logging.cpp  Logging.hpp  MT5Common.hpp  MT5Logger.hpp  MT5Monitor.hpp  mt5-monitor.cpp
src/test/: MT5Monitor.cpp
